# Varasaan

./: .commitlintrc.cjs  .dockerignore  .gitignore  .releaserc.json  AGENTS.md  CHANGELOG.md  CODEX_CHECKLIST.md  EXECUTION_PLAN.md  FINAL_LAUNCH_EXECUTION_TRACKER.md  IMPLEMENTATION_CHECKLIST.md  INTEGRATION_CHECKLIST.md  LAUNCH_RUNBOOK.md  PRODUCT_DEVELOPMENT.md  PRODUCT_VISION.md  PROGRESS_CHECKLIST.md  PR_DESCRIPTION.md  UI_UX_REVAMP_BRIEF.md  package.json
backend/: Dockerfile  pyproject.toml
backend/alembic/versions/: 20260320_0002_add_heartbeats.py  20260321_0003_add_after_loss_cases.py  20260321_0004_add_case_task_evidence.py  20260321_0005_add_recurring_payment_snapshots.py  20260322_0006_add_case_retention_fields.py  20260322_0007_add_case_activation_review_fields.py  20260326_0008_add_phase_b_billing_fields.py
backend/scripts/: generate_openapi.py
backend/src/app/: main.py
backend/src/app/api/: deps.py  router.py
backend/src/app/core/: config.py  datetime_utils.py  rate_limit.py  redis_client.py  security.py
backend/src/app/db/: session.py
backend/src/app/integrations/: __init__.py  aws.py  email.py  malware_scan.py
backend/src/app/models/: __init__.py  entities.py
backend/src/app/schemas/: auth.py  cases.py  documents.py  heartbeats.py  inventory.py  legal.py  payments.py  trusted_contacts.py
backend/src/app/services/: __init__.py  audit.py  auth.py  case_activity.py  cases.py  (+8 more)
backend/tests/: conftest.py  helpers.py  test_api_integration_flows.py  test_case_flows.py  test_contract_sync.py  test_heartbeat_flows.py  test_rate_limit.py
(+181 files in other folders)
